# django-drf-jwt-auth

./: .gitignore  README.md  setup.cfg
authentication/: backends.py  models.py
authentication/api/: serializers.py  views.py
authentication/migrations/: 0001_initial.py
